# libdogecoin

./: .clang-format  .gitignore  CMakeLists.txt  CONDUCT.md  LICENSE  Makefile.am  README.md  configure.ac  cython_tests.sh  example  libdogecoin.pc  libdogecoin.pc.in  pyproject.toml  sendtx  setup.py  spvnode  test.py  tooltests.py  update_subtrees.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ql.yml
bindings/: setup.py
bindings/golang/libdogecoin/: build.sh  libdogecoin.go  libdogecoin_test.go  transaction_test.go
bindings/py_wrappers/: mini_shell.py  wrappers.py
bindings/py_wrappers/libdogecoin/: libdogecoin.c  libdogecoin.pyx  setup.py  wrappers.py
bindings/py_wrappers/pytest/: address_test.py  block_test.py  cython_tests.sh  mini_shell.py  toolfunc_test.py  transaction_test.py
bindings/python/libdogecoin/: libdogecoin.pyx  setup.py
bindings/python/pytest/: address_test.py  cython_tests.sh  transaction_test.py
contrib/: format.sh  gitian-build.sh
contrib/devtools/: copyright_header.py  split-debug.sh
contrib/examples/: example.c
contrib/getopt/: wingetopt.c
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/libevent/test/: regress.gen.c  regress.gen.h
contrib/scripts/: README-scripts.md  README.md  archive.sh  build.sh  check_dir.sh  combine.sh  combine_lib.sh  pack.sh  run.sh  sdk.sh  setup.sh  test.sh
contrib/signing-keys/: edtubbs-key.pgp
contrib/winpthreads/include/: pthread.h
contrib/wintime/: wingettime.c  wingettime.h
depends/: .gitignore  Makefile  README.md  config.site.in  funcs.mk
depends/builders/: darwin.mk
depends/hosts/: android.mk  darwin.mk
depends/patches/ykpers/: ykpers-args.patch
doc/: address.md  bindings.md  changelog.md  eckey.md  enclaves.md  getting_started.md  project_roadmap.md  release-process.md  rest.md  signing.md  tools.md  transaction.md  transaction_extended.md  yubikey.md
docs/diagrams/: libdogecoin-stages.drawio
include/bip39/: index.h
include/dogecoin/: address.h  aes.h  aes256_cbc.h  arith_uint256.h  auxpow.h  base58.h  bip32.h  bip39.h  bip44.h  block.h  blockchain.h  buffer.h  byteswap.h  chacha20.h  chain.h  chainparams.h  common.h  constants.h  cstr.h  ctaes.h  dogecoin.h  ecc.h  ecc_key.h  eckey.h  hash.h  headersdb.h  headersdb_file.h  hmac.h  key.h  koinu.h  libdogecoin.h  map.h  mem.h  memory.h  moon.h  net.h  netspv.h  options.h  portable_endian.h  pow.h  (+24 more)
include/dogecoin/compat/: byteswap.h  portable_endian.h
include/dogecoin/crypto/: aes.h  base58.h  common.h  ecc.h  hash.h  key.h  random.h  ripemd160.h  rmd160.h  segwit_addr.h  sha2.h
include/dogecoin/net/: net.h  protocol.h
include/qr/: jpeg.h
include/test/: utest.h
include/win/: pthread.h  wingetopt.h  winunistd.h
rpctest/: Dockerfile  fetch.py  path.sh  spvtool.py
rpctest/test_framework/: authproxy.py  bignum.py  blocktools.py  comptool.py  coverage.py  key.py  mininode.py  script.py  test_framework.py  util.py
src/: .#utils.c  address.c  aes.c  aes256_cbc.c  arith_uint256.c  auxpow.c  base58.c  bench.c  bip32.c  bip39.c  bip44.c  block.c  buffer.c  chacha20.c  chainparams.c  commontools.c  cstr.c  ctaes.c  ecc.c  ecc_key.c  ecc_libsecp256k1.c  eckey.c  headersdb.c  headersdb_file.c  jpeg.c  key.c  koinu.c  libdogecoin.c  map.c  mem.c  memory.c  moon.c  net.c  netspv.c  png.c  pow.c  protocol.c  qr.c  qrengine.c  random.c  (+19 more)
src/bip39/: bip39.c  bip39c.c  bip39c.h  conversion.c  conversion.h  crypto.c  crypto.h  print_util.c  print_util.h
src/cli/: sendtx.c  spvnode.c  such.c  tool.c  wow.txt
src/crypto/: aes.c  base58.c  ecc.c  key.c  random.c  ripemd160.c  rmd160.c  segwit_addr.c  sha2.c
src/crypto/ctaes/: bench.c  ctaes.c  test.c
src/libevent/: CMakeLists.txt
src/libevent/cmake/: BuildType.cmake
src/logdb/: logdb_core.c  logdb_memdb_llist.c  logdb_memdb_rbtree.c  logdb_rec.c  misc.c  red_black_tree.c  stack.c
src/logdb/test/: logdb_tests.c  logdb_tests_sample.h  tests_red_black_tree.c
src/net/: net.c  protocol.c
src/openenclave/: CMakeLists.txt  Makefile  README.md  libdogecoin.edl
src/openenclave/enclave/: CMakeLists.txt  Makefile  enc.c
src/openenclave/host/: CMakeLists.txt  Makefile  host.c
src/optee/: Android.mk  CMakeLists.txt  common.mk.patch  nanopi6.h.patch  qemu.conf.patch  rk3588-nanopi6-common.dtsi.patch
src/optee/host/: Makefile  main.c
src/optee/ta/: Android.mk  Makefile  libdogecoin_ta.c  sub.mk  user_ta_header_defines.h
src/py_wrappers/: address_gen.py  helpers.py  mini_shell.py  wrappers.py
src/secp256k1/: Makefile.am  SECURITY.md  gen_context
src/secp256k1/include/: secp256k1.h  secp256k1_schnorrsig.h
src/secp256k1/src/: bench.h
src/tools/: dogecoin-send-tx.c  dogecoin-spv.c  dogecointool.c
src/trezor-crypto/: nist256p1.h
src/trezor-crypto/gui/: mainwindow.cpp
test/: address_tests.c  aes_tests.c  arith_uint256_tests.c  base58_tests.c  base58check_tests.c  bip32_tests.c  bip39_tests.c  bip44_tests.c  block_tests.c  buffer_tests.c  chacha20_tests.c  cstr_tests.c  ecc_tests.c  eckey_tests.c  hash_tests.c  key_tests.c  koinu_tests.c  mem_tests.c  memory_tests.c  moon_tests.c  net_tests.c  netspv_tests.c  opreturn_tests.c  protocol_tests.c  qr_tests.c  random_tests.c  rmd160_tests.c  scrypt_tests.c  serialize_tests.c  sha1_tests.c  sha2_tests.c  signmsg_tests.c  spv_tests.c  tool_tests.c  tpm_tests.c  transaction_tests.c  tx_tests.c  unittester.c  utest.h  utils_tests.c  (+2 more)
wrappers/golang/libdogecoin/: address_test.go  build.sh  go.mod  libdogecoin.go  libdogecoin_test.go  transaction_test.go
wrappers/python/: README.md  pyproject.toml  setup.py
wrappers/python/libdogecoin/: _libdogecoin.pxd  _wow.pxd  constants.py  defines.pxd  error.py  libdogecoin.pyx  setup.py  types.pxd  utils.py
wrappers/python/pytest/: address_cli.py  address_test.py  cython_tests.sh  transaction_test.py  valgrind-python.supp
wrappers/python/tests/: address_cli.py  address_test.py  base.py  cython_tests.sh  mnemonic_test.py  transaction_test.py  utils.py  wow_test.py
(+13 files in other folders)
